--- a/src/components/CharCounter/CharCounter.module.css
+++ b/src/components/CharCounter/CharCounter.module.css
@@ -5,7 +5,7 @@
 
 .warning {
   font-size: 0.85rem;
-  color: #b7770d;
+  color: #875a00;
 }
 
 .danger {
